@@ -6,14 +6,11 @@
  */
 package com.powsybl.python.network;
 
-import com.powsybl.commons.PowsyblException;
 import com.powsybl.iidm.network.Network;
+import com.powsybl.sld.layout.MatrixZoneLayoutFactory;
 import com.powsybl.sld.SingleLineDiagram;
+import com.powsybl.sld.SldParameters;
 import com.powsybl.sld.library.ComponentLibrary;
-import com.powsybl.sld.svg.DefaultDiagramLabelProvider;
-import com.powsybl.sld.svg.styles.StyleProvider;
-import com.powsybl.sld.svg.styles.NominalVoltageStyleProvider;
-import com.powsybl.sld.svg.styles.iidm.TopologicalStyleProvider;
 
 import java.io.IOException;
 import java.io.StringWriter;
@@ -21,8 +18,8 @@ import java.io.UncheckedIOException;
 import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -32,10 +29,19 @@ public final class SingleLineDiagramUtil {
     private SingleLineDiagramUtil() {
     }
 
-    static void writeSvg(Network network, String containerId, String svgFile, String metadataFile, NetworkCFunctions.LayoutParametersExt layoutParametersExt) {
+    static void writeSvg(Network network, String containerId, String svgFile, String metadataFile, SldParameters sldParameters) {
         try (Writer writer = Files.newBufferedWriter(Paths.get(svgFile));
-             Writer metadataWriter = metadataFile.isEmpty() ? new StringWriter() : Files.newBufferedWriter(Paths.get(metadataFile))) {
-            writeSvg(network, containerId, writer, metadataWriter, layoutParametersExt);
+             Writer metadataWriter = metadataFile == null || metadataFile.isEmpty() ? new StringWriter() : Files.newBufferedWriter(Paths.get(metadataFile))) {
+            writeSvg(network, containerId, writer, metadataWriter, sldParameters);
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    static void writeMatrixMultiSubstationSvg(Network network, String[][] matrixIds, String svgFile, String metadataFile, SldParameters sldParameters) {
+        try (Writer writer = Files.newBufferedWriter(Paths.get(svgFile));
+             Writer metadataWriter = metadataFile == null || metadataFile.isEmpty() ? new StringWriter() : Files.newBufferedWriter(Paths.get(metadataFile))) {
+            writeMatrixMultiSubstationSvg(network, matrixIds, writer, metadataWriter, sldParameters);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -51,9 +57,9 @@ public final class SingleLineDiagramUtil {
         }
     }
 
-    static List<String> getSvgAndMetadata(Network network, String containerId, NetworkCFunctions.LayoutParametersExt layoutParametersExt) {
+    static List<String> getSvgAndMetadata(Network network, String containerId, SldParameters sldParameters) {
         try (StringWriter writer = new StringWriter(); StringWriter writerMeta = new StringWriter()) {
-            writeSvg(network, containerId, writer, writerMeta, layoutParametersExt);
+            writeSvg(network, containerId, writer, writerMeta, sldParameters);
             writer.flush();
             writerMeta.flush();
             return List.of(writer.toString(), writerMeta.toString());
@@ -62,24 +68,30 @@ public final class SingleLineDiagramUtil {
         }
     }
 
-    static void writeSvg(Network network, String containerId, Writer writer) {
-        writeSvg(network, containerId, writer, new StringWriter(), new NetworkCFunctions.LayoutParametersExt());
+    static SldParameters createSldParameters() {
+        SldParameters sldParameters = new SldParameters();
+        sldParameters.getSvgParameters().setSvgWidthAndHeightAdded(true);
+        return sldParameters;
     }
 
-    static void writeSvg(Network network, String containerId, Writer writer, Writer metadataWriter, NetworkCFunctions.LayoutParametersExt layoutParametersExt) {
-        ComponentLibrary componentLibrary = ComponentLibrary.find(layoutParametersExt.componentLibrary)
-                .orElseThrow(() -> new PowsyblException("library with name " + layoutParametersExt.componentLibrary +
-                        " was not found for Single Line Diagram component library"));
-        StyleProvider styleProvider = layoutParametersExt.topologicalColoring ? new TopologicalStyleProvider(network)
-                : new NominalVoltageStyleProvider();
-        SingleLineDiagram.draw(network, containerId, writer, metadataWriter, layoutParametersExt.layoutParameters, componentLibrary,
-                new DefaultDiagramLabelProvider(network, componentLibrary, layoutParametersExt.layoutParameters), styleProvider, "");
+    static void writeSvg(Network network, String containerId, Writer writer) {
+        writeSvg(network, containerId, writer, new StringWriter(), createSldParameters());
+    }
+
+    static void writeSvg(Network network, String containerId, Writer writer, Writer metadataWriter, SldParameters sldParameters) {
+        SingleLineDiagram.draw(network, containerId, writer, metadataWriter, sldParameters);
+    }
+
+    static void writeMatrixMultiSubstationSvg(Network network, String[][] matrixIds, Writer writer, Writer metadataWriter, SldParameters sldParameters) {
+        sldParameters.setZoneLayoutFactory(new MatrixZoneLayoutFactory(matrixIds));
+        List<String> substationIds = Arrays.stream(matrixIds).flatMap(Arrays::stream).toList();
+        SingleLineDiagram.drawMultiSubstations(network, substationIds, writer, metadataWriter, sldParameters);
     }
 
     static List<String> getComponentLibraryNames() {
         return ComponentLibrary.findAll()
                 .stream()
                 .map(ComponentLibrary::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
